--- a/Index2.html
+++ b/Index2.html
@@ -40,7 +40,7 @@
    <div class="home-content">
      <div class="text">
        <div class="text-one">Hello,</div>
-       <div class="text-two">I am NULU PRAMEELA </div>
+       <div class="text-two">I am PEEDAKA SAI SWAROOP </div>
        <div class="text-three">Web developer </div>
        <div class="text-four">Third year student from Information Technology</div>
      </div>
